# gpu-accelerated-aes128

./: .gitignore  AES128.cpp  AES128.h  AES_Parallel.cpp  AES_Parallel.h  AES_Parallel_kernel.cu  AES_Serial.cpp  AES_Serial.h  CMakeLists.txt  README  README.md  aes128.h  compile.sh  output.txt  profile.cpp  reduction.cpp  reduction_kernel.cu  run.sh  serial.h  test.cpp  test_serial.cpp
input/: generator.py
output/: all_constant.ncu-rep  all_global.ncu-rep  all_shared.ncu-rep  plot.py  result.json  warp_shuffle.ncu-rep
parallel/: profile.cu
serial/: .gitignore  AES128.cpp  AES_Serial.cpp  AES_Serial.h
